--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@
     --btn-color: var(--primary2);
     --text-color: var(--net2);
     --heading-color: var(--net3);
+    --size-md: 0.875rem;
+    --size-l: 2rem;
 
     --font--body: 'Montserrat', sans-serif;
     --font-heading: 'Fraunces', serif;
-    --font-size: 0.875rem;
 
     --w-500: 500;
     --w-700: 700;
@@ -30,25 +31,23 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     font-family: var(--font--body);
-    font-size: var(--font-size);
+    font-size: var(--size-md);
 }
 
 h1 {
     color: var(--net3);
+    font-size: var(--size-l);
+    line-height: 1;
 }
 
-.h-style {
-    font-family: var(--font-heading);
-    font-weight: var(--w-700);
-}
-
-.price {
-    font-size: 2rem;
+p {
+    line-height: 1.6;
+    margin: 0;
 }
 
 img {
-    width: 100%;
-    height: 100%
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .containerall {
@@ -70,19 +69,60 @@ img {
     grid-template-columns: 1fr 1fr;
 }
 
-.flex {
-    display: flex;
-}
-
-.bold {
-    font-weight: var(--w-700);
-}
-
-.btn {
-    font-family: var(--font--body);
-    color: var(--net1);
+.product-img {
+    height: 100%;
 }
 
 .right {
     padding: 2rem;
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.prices {
+    height: 3.2rem;
+    margin: 1.2rem 0;
+    justify-content: left;
+}
+
+.prices p {
+    color: var(--primary2);
+}
+
+.price {
+    font-size: 2rem;
+    margin-right: 1.2rem;
+}
+
+.btn {
+    font-family: var(--font--body);
+    background-color: var(--primary2);
+    color: var(--net1);
+    width: 100%;
+    height: 3rem;
+    border: none;
+    border-radius: 6%;
+}
+
+.btn:hover {
+    background-color: hsl(158, 42%, 20%);
+    cursor: pointer;
+}
+
+.h-style {
+    font-family: var(--font-heading);
+    font-weight: var(--w-700);
+}
+
+.mini {
+    font-size: 0.75rem;
+}
+
+.bold {
+    font-weight: var(--w-700);
 }
